# resolve-env

./: Dockerfile  README.md  client.py  data.json  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  resolve_environment.py
